dartagnan/src/test/resources/spirv-clang/benign_race_tests/fail/writetiddiv64_offbyone.spv.dis
; @Config: 3, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 18
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %10 FuncParamAttr NoCapture
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
       %uint = OpTypeInt 32 0
     %uint_6 = OpConstant %uint 6
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint %uint
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void None %8
         %10 = OpFunctionParameter %_ptr_Workgroup_uint
         %11 = OpFunctionParameter %uint
         %12 = OpLabel
         %13 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %14 = OpCompositeExtract %uint %13 0
         %16 = OpShiftRightLogical %uint %14 %uint_6
         %17 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %10 %11
               OpStore %17 %16 Aligned 4
               OpReturn
               OpFunctionEnd
